# ic-rust

./: Cargo.toml  README.md  counter.did  dfx.json
.dfx/local/: canister_ids.json  network-id
backend/: Cargo.toml
backend/candid/: main.did
backend/content/: Cargo.toml
backend/content/src/: lib.rs
backend/db/: Cargo.toml
backend/db/src/: lib.rs
backend/main/: Cargo.toml
backend/main/src/: lib.rs
backend/player/: Cargo.toml
backend/player/src/: lib.rs
backend/shared/: Cargo.toml
backend/shared/src/: canister_helper.rs  consts.rs  lib.rs
scripts/: rust_build.sh
src/: lib.rs
src/db/src/: lib.rs
