[package]
name = "counter"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.14"
ic-cdk = "0.5.2"
ic-cdk-macros = "0.5.2"
ic-stable-structures = "0.3.0"
serde = "1.0.132"
serde_cbor = "0.10"


[[test]]
name="generate"
path = "src/lib.rs"

[profile.release]
lto = true
opt-level = 'z'