[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["lib"]

[dependencies]
main = { path = "main"}
content = { path = "content"}
player = { path = "player"}
shared = { path = "shared"}
db = { path = "db"}
