[package]
name = "player"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.14"
ic-cdk = "0.5.2"
ic-cdk-macros = "0.5.2"
ic-stable-structures = "0.3.0"
serde_cbor = "0.10"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
uuid = { version = "0.4", features = ["serde", "v4"] }
shared = { path = "../shared" } 
db = { path = "../db" } 

[[test]]
name="generate"
path = "src/lib.rs"

[profile.release]
lto = true
opt-level = 'z'
